--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -4,12 +4,12 @@
 {% block header %}
 <div class="px-4 py-5 text-center bg-header">
             
-    <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="95" class="d-block mx-auto">
-    <h1 class="display-5 fw-bold text-body-emphasis brand">
+    <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="95" class="d-block mx-auto revelar izquierda">
+    <h1 class="display-5 fw-bold text-body-emphasis brand revelar izquierda">
         Comprá en cuotas solo con tu firma
     </h1>
 
-    <div class="col-lg-6 mx-auto">
+    <div class="col-lg-6 mx-auto revelar izquierda">
         <h2 class="lead fw-normal mb-4">Compra productos directo de fábrica en cuotas, sin complicaciones. Encuéntranos en Tandil, Ayacucho y Azul</h2>
         <div class="mx-auto px-5" style="max-width: 600px">
             <div class="input-group">
@@ -30,8 +30,10 @@
     
     <div id="results">
         <div class="fondo">
-            <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
-            <div class="p-3 p-md-5">
+            <div class="px-3 px-md-4 revela derecha">
+                <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar prouctos</button>
+            </div>
+            <div class="p-3 p-md-5 revelar derecha">
                 <div class="container mt-2">
                     <h3 class="fw-semibold border-bottom text-uppercase fs-4">Productos Destacados</h3>
                     <div class="row gx-2 gx-md-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
@@ -42,14 +44,14 @@
                 </div>
         
                 <div class="text-center">
-                    <a href="{% url 'products:product_list' %}" class="btn btn-outline-dark" style="width: 320px;">Ver más destacados</a>
+                    <a hx-get="{% url 'products:load_product_list' %}?type=3#results" hx-target="#results" class="btn btn-outline-dark" style="width: 320px;">Ver más destacados</a>
                 </div>
             </div>
 
         </div>
 
         <div class="fondo p-3 p-md-5">
-            <div class="container mt-2">
+            <div class="container mt-2 revelar izquierda">
                 <h3 class="fw-semibold border-bottom text-uppercase fs-4">Productos en Oferta</h3>
                 <div class="row gx-2 gx-md-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
                     {% for product in offer_products %}
@@ -58,13 +60,13 @@
                 </div>
             </div>
     
-            <div class="text-center">
-                <a href="{% url 'products:product_list' %}" class="btn btn-outline-dark" style="width: 320px;">Ver más ofertas</a>
+            <div class="text-center revelar izquierda">
+                <a hx-get="{% url 'products:load_product_list' %}?type=2#results" hx-target="#results"  class="btn btn-outline-dark" style="width: 320px;">Ver más ofertas</a>
             </div>
         </div>
 
-        <div class="fondo p-3 p-md-5">
-            <div class="container mt-2">
+        <div class="fondo p-3 p-md-5 ">
+            <div class="container mt-2 revelar derecha">
                 <h3 class="fw-semibold border-bottom text-uppercase fs-4">Más productos</h3>
                 <div class="row gx-2 gx-md-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
                     {% for product in regular_products %}
@@ -73,8 +75,8 @@
                 </div>
             </div>
     
-            <div class="text-center">
-                <a href="{% url 'products:product_list' %}" class="btn btn-outline-dark" style="width: 320px;">Ver más ofertas</a>
+            <div class="text-center revelar derecha">
+                <a hx-get="{% url 'products:load_product_list' %}#results" hx-target="#results"  class="btn btn-outline-dark" style="width: 320px;">Ver más ofertas</a>
             </div>
         </div>
     </div>
@@ -92,7 +94,7 @@
 
         <div class="offcanvas-body">
 
-            <form id="filter" hx-get="{% url 'products:load_product_list' %}?" hx-target="#results" hx-trigger="change from:input, productListChanged from:body, submit, hasConsult from:body" method="get" class="p-3">
+            <form id="filter" hx-get="{% url 'products:load_product_list' %}#results" hx-target="#results" hx-trigger="change from:input, productListChanged from:body, submit, hasConsult from:body" method="get" class="p-3">
         
                 <input id="consult2" name="consult" class="visually-hidden" type="text"/>
             
