--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -48,8 +48,13 @@
 		<script src="https://unpkg.com/htmx.org@1.9.12"></script>
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+		<!--GSAP-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 		<!-- Custom JS -->
 		<script src="{% static 'js/script.js' %}"></script>
+		<script src="{% static 'js/scroll.js' %}"></script>
 
 		{% block scripts %}
 		{% endblock scripts %}
