--- a/project/templates/products/partials/product_list.html
+++ b/project/templates/products/partials/product_list.html
@@ -1,19 +1,46 @@
 <div class="fondo">
-    <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
+    <div class="px-3 px-md-4">
+        <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar prouctos</button>
+    </div>
     
     <div class="p-3 p-md-5">
         <div class="container mt-2">
                 <h3 class="fw-semibold border-bottom text-uppercase fs-4">
                     {% if category_object %}
-                        Categoria: {{category_object.parent.name}} / {{category_object.name}}{% if consult %} / "{{consult}}"{% endif %}
+                        {{category_object.parent.name}} - {{category_object.name}}
+                        {% if type %}
+                            {% if type == "2" %}
+                                - Ofertas
+                            {% elif type == "3" %}
+                                - destacados
+                            {% endif %}
+                        {% endif %}
+                        {% if consult %} - "{{consult}}"{% endif %}
                     {% endif %}
     
                     {% if consult  and not category_object%}
                         Resultados para: "{{ consult }}"
+                        {% if type %}
+                            {% if type == "2" %}
+                                - Ofertas
+                            {% elif type == "3" %}
+                                - destacados
+                            {% endif %}
+                        {% endif %}
                     {% endif %}
     
-                    {% if not consult and not category_object %}
+                    {% if not consult and not category_object and not type %}
                         Todos los productos
+                    {% endif %}
+
+                    {% if type and not category_object and not consult%}
+                        {% if type == "2" %}
+                            Productos en oferta
+                        {% elif type == "3" %}
+                            Productos destacados
+                        {% elif type == "4" %}
+                            Todos los productos
+                        {% endif %}
                     {% endif %}
                 </h3>       
             <div class="row gx-2 gx-md-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
