se corrige index.html

--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -76,7 +76,7 @@
             </div>
     
             <div class="text-center revelar derecha">
-                <a hx-get="{% url 'products:load_product_list' %}#results" hx-target="#results"  class="btn btn-outline-dark" style="width: 320px;">Ver más ofertas</a>
+                <a hx-get="{% url 'products:load_product_list' %}#results" hx-target="#results"  class="btn btn-outline-dark" style="width: 320px;">Ver más productos</a>
             </div>
         </div>
     </div>
