Se agrega validaciones en precios

--- a/project/templates/products/partials/product_card.html
+++ b/project/templates/products/partials/product_card.html
@@ -9,8 +9,8 @@
         <div class="card-body pb-0">
             <div class="text-center">
                 <h4 class="fw-semibold">{{ product.name }}</h4>
-                {% if product.price %}
-                    <p>${{ product.price }}</p>             
+                {% if product.price_cash %}
+                    <p>${{ product.price_cash }}</p>             
                 {% endif %}
 
             </div>
