--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -10,7 +10,7 @@
     </h1>
 
     <div class="col-lg-6 mx-auto revelar izquierda">
-        <h2 class="lead fw-normal mb-4">Compra productos directo de fábrica en cuotas, sin complicaciones. Encuéntranos en Tandil, Ayacucho y Azul</h2>
+        <h2 class="lead fw-normal mb-4">Compra productos directo de fábrica en cuotas, sin complicaciones. Encontranos en Tandil, Benito Juárez, Rauch y Ayacucho.</h2>
         <div class="mx-auto px-5" style="max-width: 600px">
             <div class="input-group">
                 <input id="consult1" name="consult" class="form-control" type="text" placeholder="¿Que estas buscando?" aria-label="¿Que estas buscando?" />
