--- a/project/templates/products/product_form.html
+++ b/project/templates/products/product_form.html
@@ -76,7 +76,7 @@
       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Cancelar
       </button>
-      <button type="submit" class="btn btn-success">Enviar</button>
+      <button type="submit" class="btn btn-success">Guardar</button>
   </div>
 </form>
 
