--- a/project/templates/users/message_list.html
+++ b/project/templates/users/message_list.html
@@ -5,7 +5,7 @@
         <h2 class="fw-bolder display-5 mb-4 text-uppercase text-center">Mensajes</h2>      
 
         <div class="mb-2">
-            <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
+            <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
         </div>
 
         <div id="results">
