--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -31,7 +31,7 @@
     <div id="results">
         <div class="fondo">
             <div class="px-3 px-md-4 revela derecha">
-                <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar prouctos</button>
+                <button class="btn btn-dark mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar prouctos</button>
             </div>
             <div class="p-3 p-md-5 revelar derecha">
                 <div class="container mt-2">
