--- a/project/templates/products/partials/product_list_admin.html
+++ b/project/templates/products/partials/product_list_admin.html
@@ -4,8 +4,8 @@
   <tr>
     <th>Nombre</th>
     <th>Categoria</th>
-    <th>Estado</th>
     <th>Tipo</th>
+    <th class="ocultar">Actualizado</th>
     <th></th>
   </tr>
 {% endblock table_header %}
@@ -13,17 +13,11 @@
 {% block table_body %}
     {% if object_list %}
     {% for product in object_list %}
-    <tr>
+    <tr class="{% if product.status == 1 %}
+      table-danger
+    {% endif %}">
       <td>{{ product.name|truncatechars:35 }}</td>
       <td>{{ product.category.parent }} - {{ product.category }}</td>
-      <td>
-        {% if product.status == 1 %}
-          <span class="text-danger">No publicado</span>
-        {% elif product.status == 2 %}
-          <span class="text-success">Publicado</span>
-        {% endif %}
-      </td>
-
       <td>
         {% if product.type == 1 %}
           Regular
@@ -33,7 +27,7 @@
           Destacado
         {% endif %}
       </td>
-
+      <td class="ocultar">{{ product.updated_at|date:"d/m/Y - H:i" }}hs</td>
       <td>
         <button class="btn btn-secondary btn-sm" hx-get="{% url 'products:product_detail_admin' product.slug %}" hx-target="#dialog"><i class="fas fa-eye"></i></button>
         <button class="btn btn-success btn-sm" hx-get="{% url 'products:product_update' product.slug %}" hx-target="#dialog"><i class="fas fa-edit"></i></button>
