--- a/project/templates/products/product_confirm_action.html
+++ b/project/templates/products/product_confirm_action.html
@@ -1,18 +1,14 @@
 <div class="modal-content">
     <div class="modal-header">
         <h5 class="modal-title">
-            {% if '/confirmar/eliminar/' in request.path %}
-            Eliminar testimonio
-            {% else %}
-            Actualizar testimonio
-            {% endif %}
+            Confirmar eliminar"
             </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
 
     
-            <p>¿Confirmas eliminar el testimonio de {{product.name}}?</p>
+            <p>¿Confirmas eliminar "{{product.name}}"?</p>
             <p class="text-muted">Esta acción no se puede deshacer.</p>
        
     </div>
@@ -20,8 +16,6 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
         Cancelar
         </button>
-            <button type="submit" class="btn btn-danger" hx-delete = "{% url 'products:product_delete' product.slug %}" hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}' >Eliminar</button>
-
- 
+        <button type="submit" class="btn btn-danger" hx-delete = "{% url 'products:product_delete' product.slug %}" hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}' >Eliminar</button>
     </div>
 </div>
