--- a/project/templates/users/login.html
+++ b/project/templates/users/login.html
@@ -11,7 +11,7 @@
                     <img class="mb-4" src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="75"><span class="brand fs-2 fw-bold"> MUNDO CUOTAS</span>
                 </div>
     
-                <h1 class="fs-5 mb-3 fw-semibold">Iniciar sesión</h1>
+                <h1 class="fs-5 mb-3 fw-semibold advent-pro">Iniciar sesión</h1>
         
                 {% for field in form %}
                     <div class="form-floating mb-2">
