--- a/project/templates/components/navbar.html
+++ b/project/templates/components/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="container-fluid px-4">
-    <a class="navbar-brand fs-5 fw-bolder brand" href="{% url 'products:product_list' %}">
+    <a class="navbar-brand fs-5 fw-bold brand" href="{% url 'products:product_list' %}">
         <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" class="icon-navbar"> MUNDO CUOTAS
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,27 +12,27 @@
         <hr>
        
         <ul class="navbar-nav fs-5 fw-bolder" id="navbarList">
-            <li class="nav-item scale">
-                <a class="nav-link {% if request.path == '/' %}active-nav{% endif %}" 
+            <li class="nav-item scale {% if request.path == '/' %}active{% endif %}">
+                <a class="nav-link fw-bold" 
                 {% if request.path == '/' %}
                     aria-current="page" 
                 {% endif %}
                 href="{% url 'products:product_list' %}">Productos</i></a>
             </li>
-            <li class="nav-item scale {% if request.path == '/contacto/' %}active-nav{% endif %}">
-                <a class="nav-link" href="{% url 'products:contact' %}">Contacto</a>
+            <li class="nav-item scale {% if request.path == '/contacto/' %}active{% endif %}">
+                <a class="nav-link fw-bold" href="{% url 'products:contact' %}">Contacto</a>
             </li>
 
             {% if user.is_authenticated %}
-                <li class="nav-item scale {% if request.path == '/administracion/productos/' %}active-nav{% endif %}">
-                    <a class="nav-link" href="{% url 'products:product_list_admin' %}">Administración</a>
+                <li class="nav-item scale {% if request.path == '/administracion/productos/' %}active{% endif %}">
+                    <a class="nav-link fw-bold" href="{% url 'products:product_list_admin' %}">Administración</a>
                 </li>     
             {% endif %}
 
 
             {% if user.is_authenticated %}
             <li class="nav-item dropdown pt-3 pt-md-0">
-                <a class="nav-link dropdown-toggle username scale" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle username scale fw-bold" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     {{ user.username }}
                     <span class="position-relative">
                         {% if user.avatar.image %}
