--- a/project/templates/products/partials/product_card.html
+++ b/project/templates/products/partials/product_card.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 <div class="col mb-4">
-    <div class="card h-100 position-relative">
+    <div class="card h-100 position-relative border-0">
         <img class="card-img-top object-fit-cover" src="{{ product.files.first.file.url }}" alt="{{ product.name}}" style="height: 150px"/>
         {% if product.type == 2 %}
             <p class="position-absolute top-0 end-0 badge bg-success m-2">En oferta</p>
@@ -10,7 +10,7 @@
         {% endif %}
         <div class="card-body pb-0">
             <div class="text-center">
-                <h4 class="fw-semibold">{{ product.name }}</h4>
+                <h4 class="fw-semibold fs-5 advent-pro">{{ product.name }}</h4>
                 {% if product.price_cash %}
                     <p>${{ product.price_cash|format_number_with_commas:2 }}</p>             
                 {% endif %}
