google search console meta etiqueta

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -24,6 +24,8 @@
 				}
 			}
 		</script>
+		
+		<meta name="google-site-verification" content="J3rxKhZE86dCgbNE8b3pInqJBGypX1sw0yndreLJnZY" />
 
 		<meta name="robots" content="index, follow">
 		<meta name="description" content="Descubre Mundo Cuotas y Compra productos directo de fábrica en cuotas, sin complicaciones. Encontranos en Tandil, Benito Juárez, Rauch y Ayacucho.">
